--- a/public/css/app.css
+++ b/public/css/app.css
@@ -550,6 +550,9 @@ input:invalid, textarea:invalid, select:invalid {
   white-space: nowrap;
   border-width: 0;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .static {
   position: static;
 }
@@ -558,6 +561,12 @@ input:invalid, textarea:invalid, select:invalid {
 }
 .relative {
   position: relative;
+}
+.inset-0 {
+  top: 0px;
+  right: 0px;
+  bottom: 0px;
+  left: 0px;
 }
 .inset-y-0 {
   top: 0px;
@@ -625,6 +634,9 @@ input:invalid, textarea:invalid, select:invalid {
 .-ml-px {
   margin-left: -1px;
 }
+.mt-4 {
+  margin-top: 1rem;
+}
 .block {
   display: block;
 }
@@ -685,11 +697,17 @@ input:invalid, textarea:invalid, select:invalid {
 .w-5 {
   width: 1.25rem;
 }
+.w-0 {
+  width: 0px;
+}
 .max-w-7xl {
   max-width: 80rem;
 }
 .max-w-md {
   max-width: 28rem;
+}
+.max-w-sm {
+  max-width: 24rem;
 }
 .flex-1 {
   flex: 1 1 0%;
@@ -909,6 +927,12 @@ input:invalid, textarea:invalid, select:invalid {
 .pl-3 {
   padding-left: 0.75rem;
 }
+.pr-10 {
+  padding-right: 2.5rem;
+}
+.pr-3 {
+  padding-right: 0.75rem;
+}
 .text-center {
   text-align: center;
 }
@@ -994,6 +1018,10 @@ input:invalid, textarea:invalid, select:invalid {
 .text-green-800 {
   --tw-text-opacity: 1;
   color: rgb(22 101 52 / var(--tw-text-opacity));
+}
+.text-red-500 {
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
 }
 .placeholder-gray-400::-moz-placeholder {
   --tw-placeholder-opacity: 1;
@@ -1376,6 +1404,9 @@ input:invalid, textarea:invalid, select:invalid {
   .lg\:max-w-2xl {
     max-width: 42rem;
   }
+  .lg\:flex-none {
+    flex: none;
+  }
   .lg\:flex-grow-0 {
     flex-grow: 0;
   }
@@ -1385,6 +1416,10 @@ input:invalid, textarea:invalid, select:invalid {
   .lg\:px-8 {
     padding-left: 2rem;
     padding-right: 2rem;
+  }
+  .lg\:px-20 {
+    padding-left: 5rem;
+    padding-right: 5rem;
   }
   .lg\:pb-28 {
     padding-bottom: 7rem;
@@ -1399,6 +1434,10 @@ input:invalid, textarea:invalid, select:invalid {
   }
   .xl\:inline {
     display: inline;
+  }
+  .xl\:px-24 {
+    padding-left: 6rem;
+    padding-right: 6rem;
   }
   .xl\:pb-32 {
     padding-bottom: 8rem;
